--- a/app/views/application_mailer/appointment_answered.html.erb
+++ b/app/views/application_mailer/appointment_answered.html.erb
@@ -7,6 +7,6 @@
 
     <p>Scheduled date: <%= @appointment.requested_date.strftime("%B %d, %Y at %I:%M %p") %></p>
 
-    <p>Thanks,<br>Nutrium Team</p>
+    <p>Thanks,<br>nutrinutri Team</p>
   </body>
 </html>
